--- a/app/views/meals/show.html.erb
+++ b/app/views/meals/show.html.erb
@@ -10,3 +10,4 @@
 
 <%= link_to 'Edit', edit_meal_path(@meal) %> |
 <%= link_to 'Back', meals_path %>
+<%= link_to 'Home', controller: 'home_screen' %>
