--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,5 +11,20 @@
  * It is generally better to create a new file per style scope.
  *
  */
-
+// @import "bootstrap-sprockets";
  @import "bootstrap";
+
+ #error_explanation {
+  color: red;
+  ul {
+    color: red;
+    margin: 0 0 30px 0;
+  }
+}
+
+// .field_with_errors {
+//   @extend .has-error;
+//   .form-control {
+//     color: red;
+//   }
+// }
