--- a/app/views/home_screen/index.html.erb
+++ b/app/views/home_screen/index.html.erb
@@ -251,6 +251,10 @@
       break;
 
       case 8:
+      case 9:
+      case 10:
+      case 11:
+      case 12:
       // return
       drawTree(xPos);
       break;
@@ -408,6 +412,7 @@
     drawGround();
 
     plantingOnFibonacciMeals();
+    
 
     // switch (gon.count){
     //   case 1: drawGrassSingle(20);
