--- a/app/views/home_screen/index.html.erb
+++ b/app/views/home_screen/index.html.erb
@@ -72,7 +72,7 @@ Track Meal </button>
 
 </div> -->
 <p>
-  <%= link_to 'List your Plant-Based Meals', meals_path %>
+  <%= link_to 'List your Plant-Based Meals', microposts_path %>
 </p>
 
 
